--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
         <p>Dados atualizados até março de 2025</p>
         <p>SENAI Vila Mariana - Todos os direitos reservados © 2025</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
