--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <strong>Iluminação</strong>
     </span>
 </div>
-<a href="graficos2.html">
+<a href="graficos.html">
     <div class="box7">
         <span>
             <strong>Climatização</strong>
