--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </main>
     
     <footer class="footer">
-        <p>Dados atualizados até março de 2025</p>
+        <p>Dados atualizados até abril de 2025</p>
         <p>SENAI Vila Mariana - Todos os direitos reservados © 2025</p>
     </footer>
     <script src="script.js"></script>
